修改目录结构，不以/blog为根目录，以/为根目录。

--- a/backup/HexoSrc/_config.yml
+++ b/backup/HexoSrc/_config.yml
@@ -15,7 +15,7 @@ timezone: Asia/Shanghai
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://LySnake.github.io
-root: /Blog/
+root: /
 permalink: :category/:title/
 permalink_defaults:
     category: technology
