--- a/backup/HexoSrc/_config.yml
+++ b/backup/HexoSrc/_config.yml
@@ -16,9 +16,9 @@ timezone: Asia/Shanghai
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://LySnake.github.io
 root: /
-permalink: :category/:title/
+permalink: :category/:title.html
 permalink_defaults:
-    category: technology
+    category: echnology/other
 # Directory
 source_dir: source
 public_dir: public
@@ -46,9 +46,12 @@ highlight:
   tab_replace:
 
 # Category & Tag
-default_category: technology
+default_category: technology/other
 category_map: IT
 tag_map:
+  - HTML
+  - CSS
+  - JavaScript
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
