备份： 1.doushuo更改，多种样工，包括头像旋转、浏览器类型、博主名等 2.修改收藏页title， 3.增加友链为常用已知的学习链接

--- a/backup/yeleeSrc/_config.yml
+++ b/backup/yeleeSrc/_config.yml
@@ -83,7 +83,7 @@ subnav:
 # Chose ONE as your comment system and keep others disable.
 # 选一个作为网站评论系统，其他保持禁用。
 
-preload_comment: true
+preload_comment: false
 ## false: 当点击评论条等区域时再加载评论模块
 ## false: load comment's section until u click/hover on the bar/icon
 
@@ -184,10 +184,19 @@ tagcloud: true
 # Blogroll, Link exchange | 友情链接
 ## 编辑友链
 friends:
+  #site
   GitHub: https://www.github.com
+  GitBook: https://www.gitbook.com/explore
   LeetCode: https://leetcode.com
   segmentfault: https://segmentfault.com
-
+  #资源site
+  鸟书: http://linux.vbird.org
+  study-area: http://www.study-area.org/menu2.htm
+  #学习site
+  MDN: https://developer.mozilla.org/zh-CN/
+  codepen: http://codepen.io/
+  Bootstrap: http://www.bootcss.com/
+  jQuery: http://www.jquery123.com/
 
 ## 关闭友链
 #friends: false
